# tree-sitter-nickel

./: Cargo.toml  LICENSE  README.md  cheatsheet.txt  grammar.js  nix2nickel.txt  package.json  shell.nix  todo.txt
corpus/: array.txt  basic.txt  bool.txt  record.txt  string.txt  type.txt
corpus-todo/: stringblock-multilevel.txt
corpus-todo/examples/: gcc.txt  merge.txt  polymorphism.txt  record-contract.txt  simple-contracts.txt
corpus/examples/: array.txt  fibonacci.txt  merge.txt
queries/: highlights.scm
queries-todo/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.cc
src/tree-sitter/lib/src/: lexer.h
